wwr/styles/rafting.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto:ital@0;1&display=swap");

:root {
  --heading-font: "Open Sans", Arial, sans-serif;
  --paragraph-font: "Roboto", Verdana, sans-serif;

  --primary-color: #666b6a;
  --secondary-color: #72a276;
  --accent1-color: #86cd82;
  --accent2-color: #8ae9c1;
}

h1,
h2,
h3 {
  font-family: var(--heading-font);
  color: var(--secondary-color);
}

p {
  font-family: var(--paragraph-font);
  color: var(--primary-color);
}

body {
  position: relative;
}

.hero {
  position: relative;
}

.hero img {
  display: block;
  width: 100%;
  height: 400px;
}

.hero h1 {
  position: absolute;
  width: 100%;
  top: 0;
  text-align: center;
  color: rgba(248, 245, 245, 0.774);
  background-color: rgba(63, 182, 16, 0.295);
}

.hero article img {
  width: 250px;
  height: auto;
  float: right;
  margin-left: 1px;
}

article {
  position: absolute;
  padding: 20px;
  top: 190px;
  background-color: #ebc20f46;
  width: 60%;
  left: 36%;
  
}

article p {
  color: #ffffffc0;
}

a {
  text-decoration: none;
  font-size: larger;
  font-family: var(--heading-font);
  color: var(--primary-color);
  padding: 5px;
}

header{
  display: grid;
  align-items: center;
  justify-content: space-around;
  background-color: rgba(63, 182, 16, 0.089);
  padding: 5px;
  border-radius: 10px;
}
header img{
  grid-column: 1/2;
  padding: 5px;
  mix-blend-mode: color-burn;
}
header nav{
  grid-column: 2/3;
}
header nav a{
  border: 2px solid #a3aca8;
  margin-left: 10px;
  border-radius: 30px;
}

nav{
  display: flex;
}

footer{
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  border-top: 2px solid var(--secondary-color);
  padding-top: 15px;
}
footer a img{
  width: 25px;
  
}
header, main, footer{
  width: 90%;
  margin: auto;
}
section h2{
  text-align: center;
  border-bottom: 1px dashed var(--secondary-color);
  padding-bottom: 20px;
}
.history p{
  border-bottom: 1px dashed var(--secondary-color);
  padding-bottom: 20px;
}

.adventure{
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-items: center;
  overflow: auto;

}
.adventure figure {
  width: fit-content;
}
.adventure a img{
  width: 300px;
  aspect-ratio: 2/1;
  object-fit: contain;
}
pic{
  width: 100%;
}
figcaption {
    color:var(--secondary-color);
    font-family: var(--paragraph-font);
    text-align: center;
}

